--- a/estilo.css
+++ b/estilo.css
@@ -33,6 +33,8 @@ header {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    border: solid;
+
   }
   
   .location .city {
@@ -46,6 +48,9 @@ header {
   .location .date {
     color: #FFF;
     font-size: 16px;
+    color: #FFF;
+    font-weight: 500;
+    text-shadow: 0px 2px rgba(0, 0, 0, 0.4);
   }
   
   .current .temp {
@@ -69,10 +74,3 @@ header {
     text-shadow: 0px 3px rgba(0, 0, 0, 0.4);
   }
   
-  .current .hi-low {
-    color: #FFF;
-    font-size: 24px;
-    font-weight: 500;
-    text-shadow: 0px 4px rgba(0, 0, 0, 0.4);
-  }
- 
